<resources>
    <string name="app_name">Orange Pages</string>
    <string name="login_heading_1">Welcome back!</string>
    <string name="login_heading_2">Sign in to your account</string>
    <string name="login_error">Invalid username or password</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="country">Country</string>
    <string name="login">login</string>
    <string name="description_login_shape">login shape</string>
    <string name="description_logo">logo</string>
    <string name="toolbar_user_list">User list</string>
    <string name="toolbar_user_profile">User Profile</string>
    <string name="details">Details</string>
    <string name="address">Address</string>
    <string name="company">Company</string>
    <string name="login_remember">Keep me signed in</string>
    <string name="menu_log_out">Log out</string>
</resources>