<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginFragment">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription=""
        android:src="@drawable/bg_login_shape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_200"
        android:backgroundTint="@color/orange"
        android:src="@drawable/ic_android"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textViewLoginHeading1"
        style="@style/TextAppearance.MaterialComponents.Headline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/normal_100"
        android:text="@string/login_heading_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLogo" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textViewLoginHeading2"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_heading_2"
        app:layout_constraintStart_toStartOf="@id/textViewLoginHeading1"
        app:layout_constraintTop_toBottomOf="@+id/textViewLoginHeading1" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/normal_200"
        android:layout_marginTop="@dimen/normal_150"
        android:hint="@string/username"
        app:boxBackgroundColor="@android:color/transparent"
        app:endIconDrawable="@drawable/ic_person_24"
        app:endIconMode="custom"
        app:endIconTint="@color/orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewLoginHeading2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/normal_200"
        android:hint="@string/password"
        app:boxBackgroundColor="@android:color/transparent"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/orange"
        app:layout_constraintEnd_toEndOf="@id/inputLayoutUsername"
        app:layout_constraintStart_toStartOf="@id/inputLayoutUsername"
        app:layout_constraintTop_toBottomOf="@+id/inputLayoutUsername">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutCountry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/normal_200"
        android:hint="@string/country"
        app:boxBackgroundColor="@android:color/transparent"
        app:endIconTint="@color/orange"
        app:layout_constraintEnd_toEndOf="@id/inputLayoutUsername"
        app:layout_constraintStart_toStartOf="@id/inputLayoutUsername"
        app:layout_constraintTop_toBottomOf="@+id/inputLayoutPassword">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextCountry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        style="MaterialComponents.Button"
        android:layout_width="@dimen/xlarge_200"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/normal_100"
        android:layout_marginTop="@dimen/normal_100"
        android:text="@string/login"
        app:cornerRadius="@dimen/normal_100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputLayoutCountry" />
</androidx.constraintlayout.widget.ConstraintLayout>