<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="user"
            type="com.rbnb.userdirectory.user_list.User" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".UserDirectoryActivity">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbarUserDetails"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/toolbar_user_profile"
            app:titleTextColor="?attr/colorOnPrimary" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scrollViewUserDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbarUserDetails">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/imageViewUserPhoto"
                    android:layout_width="@dimen/xlarge_225"
                    android:layout_height="@dimen/xlarge_225"
                    android:layout_marginTop="@dimen/normal_100"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent"
                    app:srcCompat="@mipmap/ic_launcher"
                    tools:src="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/textViewUsername"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/normal_100"
                    android:layout_marginTop="@dimen/normal_100"
                    android:text="@{user.username}"
                    android:textAlignment="center"
                    android:textSize="@dimen/font_size_24"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageViewUserPhoto"
                    tools:text="@tools:sample/cities" />

                <TextView
                    android:id="@+id/textViewUserFullName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@{user.name}"
                    android:textAlignment="center"
                    android:textSize="@dimen/font_size_16"
                    app:layout_constraintEnd_toEndOf="@+id/textViewUsername"
                    app:layout_constraintStart_toStartOf="@+id/textViewUsername"
                    app:layout_constraintTop_toBottomOf="@+id/textViewUsername"
                    tools:text="@tools:sample/full_names" />

                <View
                    android:id="@+id/dividerUserDetails"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/normal_100"
                    android:background="@android:color/darker_gray"
                    app:layout_constraintEnd_toEndOf="@+id/textViewUserFullName"
                    app:layout_constraintStart_toStartOf="@+id/textViewUserFullName"
                    app:layout_constraintTop_toBottomOf="@+id/textViewUserFullName" />

                <TextView
                    android:id="@+id/textViewUserDetails"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/normal_100"
                    android:layout_marginTop="@dimen/normal_100"
                    android:padding="@dimen/small_50"
                    android:text="@string/details"
                    android:textSize="@dimen/font_size_18"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/dividerUserDetails" />

                <TextView
                    android:id="@+id/textViewEmail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/normal_100"
                    android:layout_marginTop="@dimen/small_100"
                    android:drawablePadding="@dimen/normal_100"
                    android:padding="@dimen/small_50"
                    android:text="@{user.email}"
                    android:textSize="@dimen/font_size_16"
                    app:drawableStartCompat="@drawable/ic_email_24"
                    app:layout_constraintBottom_toTopOf="@+id/textViewPhone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewUserDetails"
                    tools:text="abc@gmail.com" />

                <TextView
                    android:id="@+id/textViewPhone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/normal_100"
                    android:padding="@dimen/small_50"
                    android:text="@{user.phone}"
                    android:textSize="@dimen/font_size_16"
                    app:drawableStartCompat="@drawable/ic_round_phone_24"
                    app:layout_constraintBottom_toTopOf="@+id/textViewWebsite"
                    app:layout_constraintEnd_toEndOf="@+id/textViewEmail"
                    app:layout_constraintStart_toStartOf="@+id/textViewEmail"
                    app:layout_constraintTop_toBottomOf="@+id/textViewEmail"
                    tools:text="@tools:sample/us_phones" />

                <TextView
                    android:id="@+id/textViewWebsite"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/normal_100"
                    android:padding="@dimen/small_50"
                    android:text="@{user.website}"
                    android:textSize="@dimen/font_size_16"
                    app:drawableStartCompat="@drawable/ic_world_24"
                    app:layout_constraintEnd_toEndOf="@+id/textViewEmail"
                    app:layout_constraintStart_toStartOf="@+id/textViewEmail"
                    app:layout_constraintTop_toBottomOf="@+id/textViewPhone"
                    tools:text="www.abc.com" />

                <TextView
                    android:id="@+id/textViewUserAddress"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/normal_100"
                    android:layout_marginTop="@dimen/normal_100"
                    android:padding="@dimen/small_50"
                    android:text="@string/address"
                    android:textSize="@dimen/font_size_18"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewWebsite" />

                <fragment
                    android:id="@+id/mapUserDetails"
                    android:name="com.google.android.gms.maps.SupportMapFragment"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/xlarge_250"
                    android:layout_marginHorizontal="@dimen/normal_100"
                    android:layout_marginTop="@dimen/small_100"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewUserAddress" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>